<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_background"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_in_fragment_header"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorLight"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_text_input_email"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:theme="@style/SignInTextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_fragment_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorLight"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_text_input_password"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:theme="@style/SignInTextInputLayoutAppearance"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text_input_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorLight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_fragment_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorLight"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorLight"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_in_fragment_button"
        android:textAllCaps="true"
        android:textColor="@color/colorPurpleFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text_input_password" />

    <TextView
        android:id="@+id/socialmedia_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_fragment_socialmedia_login_str"
        android:textAllCaps="true"
        android:textColor="@color/colorLight"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/sign_in_socialmedia_google_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/socialmedia_circle_button"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_socialmedia_facebook_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/socialmedia_textview" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/sign_in_socialmedia_facebook_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/socialmedia_circle_button"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_socialmedia_twitter_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sign_in_socialmedia_google_btn"
        app:layout_constraintTop_toBottomOf="@id/socialmedia_textview" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/sign_in_socialmedia_twitter_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/socialmedia_circle_button"
        android:src="@drawable/ic_twitter"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sign_in_socialmedia_facebook_btn"
        app:layout_constraintTop_toBottomOf="@id/socialmedia_textview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="334dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="334dp" />

    <TextView
        android:id="@+id/sign_in_sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_fragment_sign_in_btn"
        android:textAllCaps="true"
        android:textColor="@color/colorLight"
        android:textSize="16sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_socialmedia_twitter_btn" />

    <ImageView
        android:id="@+id/waves_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_light_waves"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="sign_in_sign_up_btn"
        android:alpha="0.8"
        />
    <TextView
        android:id="@+id/sign_in_dont_rembmer_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in_fragment_dont_remember_pass_btn"
        android:textColor="@color/colorPurpleFont"
        android:textSize="12sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>